Fixed a problem where a scrollbar was showing up in comicstrip when hovering over left button.

--- a/public/css/scrollRegion.less
+++ b/public/css/scrollRegion.less
@@ -122,3 +122,18 @@
 {
     border-bottom-color:yellow;
 }
+
+.comicstripitem
+{
+    position:absolute;
+
+    background:#666;
+    border:1px solid black;
+    border-radius:10px;
+
+    &:hover
+    {
+        background:rgba(255,255,100,0.5);
+    }
+}
+
